[gd_scene load_steps=4 format=3 uid="uid://d0ff0kw0ig0it"]

[ext_resource type="Script" path="res://point.gd" id="1_igtw4"]

[sub_resource type="SphereMesh" id="SphereMesh_8tot0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yqxkr"]
radius = 9.48683

[node name="P1" type="Node2D"]
script = ExtResource("1_igtw4")

[node name="point" type="MeshInstance2D" parent="."]
scale = Vector2(15.517, 15.517)
mesh = SubResource("SphereMesh_8tot0")

[node name="Area2D" type="Area2D" parent="."]

[node name="MouseDetector" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yqxkr")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
